compiler/typ/tests/fixtures/diagnostics/0949_gadt_operator_on_wrong_branch_09.ml.infer.expected
File "0949_gadt_operator_on_wrong_branch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0949_gadt_operator_on_wrong_branch_09 is not a valid module name.

File "0949_gadt_operator_on_wrong_branch_09.ml", line 11, characters 20-21:
11 |     | WBool_iota -> x + 9
                         ^
Error: The value x has type a = bool but an expression was expected of type
         int
